syntax = "proto3";

option java_package = "com.example.android_bootcamp";
option java_multiple_files = true;

message UserPreferences {
 string first_name = 1;
 string last_name = 2;
 string email = 3;
}